--- a/index.html
+++ b/index.html
@@ -1,10 +1,35 @@
-<Html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./main.css">
+    <title>Meal Finder</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+</head>
 <body>
-<center>
-<h1>This is the demo for Continuous Deployment on Kubernetes with GitOps and ArgoCD</h1> <br>
-<br>
-<h1>Hello World</h1>>
-<img src='https://raw.githubusercontent.com/Ajaypathak372/cloud-task2/master/task2.jpg' width=600 height=480>
-</center>
+    <div class="container">
+        <div class="wrapper">
+        <h1>Meal Finder</h1>
+        <div class="flex">
+            <form class = "flex" id = "submit">
+                <input type="text" id = "search" placeholder="Search for meals or keywords" />
+                <button class = "search-btn" type = "submit">
+                    <i class="fas fa-search"></i>
+                </button>
+            </form>
+
+            <button class = "random-btn" id = "random">
+                <i class="fas fa-random"></i>
+            </button>
+        </div>
+    </div>
+        <div id="result-heading"></div>
+        <div id="meals" class="meals"></div>
+        <div id="single-meal"></div>
+    </div>
+
+    <script src = "main.js"></script>
 </body>
-</Html>
+</html>
